k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lua-nginx-service
spec:
  selector:
    app: lua-nginx # Match the labels of your Node.js Deployment
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000 # Assuming your Node.js app is running on port 3000
      nodePort: 31110
